force-app/main/default/objects/Rippling_Field_Mapping__mdt/Rippling_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Rippling Field Mapping</label>
    <pluralLabel>Rippling Field Mappings</pluralLabel>
</CustomObject>