force-app/main/default/objects/Rippling_Field_Mapping__mdt/fields/Rippling_Path__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Path__c</fullName>
    <description>Dot-notation path into the Rippling API response (e.g. custom_fields.is_driver).</description>
    <label>Rippling Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>