force-app/main/default/objects/Rippling_Field_Mapping__mdt/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <description>API name of the Employee__c custom field to populate.</description>
    <label>Salesforce Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>